--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,11 @@
     "strict": true,
     "esModuleInterop": true,
     "outDir": "dist",
-    "declaration": true
+    "declaration": true,
+    "rootDirs": ["./src", "./scripts", "./test"],
+    "resolveJsonModule": true
   },
+  "exclude": ["dist", "node_modules"],
   "include": ["./scripts", "./test", "./typechain"],
   "files": ["./hardhat.config.ts"]
 }
