--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "sos-chain",
   "version": "0.0.1",
   "description": "",
+  "author": "XYZ Teknoloji <info@xyzteknoloji.com>",
+  "license": "MIT",
   "main": "index.js",
   "dependencies": {
-    "@openzeppelin/contracts": "^4.5.0",
-    "@openzeppelin/contracts-upgradeable": "^4.5.1"
+    "@openzeppelin/contracts": "^4.5.0"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.5",
@@ -42,7 +43,5 @@
   },
   "scripts": {
     "test": "mocha"
-  },
-  "author": "",
-  "license": "ISC"
+  }
 }
