--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@gnosis.pm/safe-core-sdk-types": "^1.0.0",
     "@gnosis.pm/safe-deployments": "^1.11.0",
     "@gnosis.pm/safe-ethers-lib": "^1.0.0",
+    "@chainlink/contracts": "^0.4.0",
     "@openzeppelin/contracts": "^4.5.0"
   },
   "devDependencies": {
