--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.4",
     "hardhat": "^2.8.4",
-    "hardhat-gas-reporter": "^1.0.7",
+    "hardhat-deploy": "^0.10.6",
+    "hardhat-deploy-ethers": "^0.3.0-beta.13",
+    "hardhat-gas-reporter": "^1.0.8",
     "prettier": "^2.5.1",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solhint": "^3.3.7",
