--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "license": "MIT",
   "main": "index.js",
   "dependencies": {
+    "@gnosis.pm/safe-contracts": "^1.3.0",
+    "@gnosis.pm/safe-core-sdk": "^2.0.0",
+    "@gnosis.pm/safe-core-sdk-types": "^1.0.0",
+    "@gnosis.pm/safe-deployments": "^1.11.0",
+    "@gnosis.pm/safe-ethers-lib": "^1.0.0",
     "@openzeppelin/contracts": "^4.5.0"
   },
   "devDependencies": {
