--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "license": "MIT",
   "main": "index.js",
   "dependencies": {
+    "@chainlink/contracts": "^0.4.0",
     "@gnosis.pm/safe-contracts": "^1.3.0",
     "@gnosis.pm/safe-core-sdk": "^2.0.0",
     "@gnosis.pm/safe-core-sdk-types": "^1.0.0",
     "@gnosis.pm/safe-deployments": "^1.11.0",
     "@gnosis.pm/safe-ethers-lib": "^1.0.0",
-    "@chainlink/contracts": "^0.4.0",
     "@openzeppelin/contracts": "^4.5.0"
   },
   "devDependencies": {
@@ -37,7 +37,7 @@
     "eslint-plugin-promise": "^5.2.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.4",
-    "hardhat": "^2.9.1",
+    "hardhat": "^2.10.1",
     "hardhat-deploy": "^0.10.6",
     "hardhat-deploy-ethers": "^0.3.0-beta.13",
     "hardhat-gas-reporter": "^1.0.8",
@@ -50,6 +50,6 @@
     "typescript": "^4.5.5"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "npx hardhat test"
   }
 }
