Add sample .env file

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,12 @@
+# NODES
+FUJI_NODE=
+AVALANCHE_NODE=
+
+# DEPLOYMENT
+LOCAL_PRIVATE_KEY=
+MNEMONIC=
+
+# GAS REPORTER
+REPORT_GAS=
+COINMARKETCAP_APIKEY=
 ETHERSCAN_API_KEY=
-PRIVATE_KEY=
-RINKEBY_PRIVATE_KEY=
-INFURA_ID = 
